--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -3,13 +3,13 @@
 # ============================
 
 # ===== 节点策略分组 =====
-
+custom_proxy_group=🚀 节点选择`select`♻️ 自动选择,🔯 故障转移,🔮 负载均衡,🇯🇵 日本节点,🇺🇲 美国节点,🇬🇧 英国节点,🇰🇷 韩国节点,🇭🇰 香港节点,🇹🇼 台湾节点,🇸🇬 新加坡节点,🇳🇱 荷兰节点,🇫🇮 芬兰节点,🇪🇸 西班牙节点,🇮🇱 以色列节点,🚀 手动切换
 custom_proxy_group=♻️ 自动选择`url-test`(.*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`(.*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`(.*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀 手动切换`select`.*
+custom_proxy_group=🎯 全球直连`select`DIRECT
 
-custom_proxy_group=🚀 节点选择`select`♻️ 自动选择,🔯 故障转移,🔮 负载均衡,🇯🇵 日本节点,🇺🇲 美国节点,🇬🇧 英国节点,🇰🇷 韩国节点,🇭🇰 香港节点,🇹🇼 台湾节点,🇸🇬 新加坡节点,🇳🇱 荷兰节点,🇫🇮 芬兰节点,🇪🇸 西班牙节点,🇮🇱 以色列节点,🚀 手动切换
 
 # ===== AI 平台策略分组（过滤高封锁区） =====
 custom_proxy_group=💬 Ai平台`select`🚀 节点选择,♻️ 自动选择,🇯🇵 日本节点,🇺🇲 美国节点,🇬🇧 英国节点,🇳🇱 荷兰节点,🇫🇮 芬兰节点,🇪🇸 西班牙节点,🇮🇱 以色列节点,🇸🇬 新加坡节点,🇹🇼 台湾节点,🚀 手动切换
