--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -1,34 +1,64 @@
-# ============================
-# 🚀 Clash 配置优化方案（适配 AI + 媒体平台）
-# ============================
+[custom]
+;不要随意改变关键字，否则会导致出错
+;acl4SSR规则
 
-# ===== 节点策略分组 =====
-custom_proxy_group=🚀 节点选择`select`♻️ 自动选择,🔯 故障转移,🔮 负载均衡,🇯🇵 日本节点,🇺🇲 美国节点,🇬🇧 英国节点,🇰🇷 韩国节点,🇭🇰 香港节点,🇹🇼 台湾节点,🇸🇬 新加坡节点,🇳🇱 荷兰节点,🇫🇮 芬兰节点,🇪🇸 西班牙节点,🇮🇱 以色列节点,🚀 手动切换
-custom_proxy_group=♻️ 自动选择`url-test`(.*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 故障转移`fallback`(.*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔮 负载均衡`load-balance`(.*)`http://www.gstatic.com/generate_204`300,,50
+;去广告：支持
+;自动测速：支持
+;微软分流：支持
+;苹果分流：支持
+;增强中国IP段：支持
+;增强国外GFW：支持
+
+;设置规则标志位
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
+ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=🐟 漏网之鱼,[]FINAL
+
+;设置分组标志位
+custom_proxy_group=🚀 节点选择`select`[]🌩 CF优选IP`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]🇵🇱 波兰节点`[]🇬🇧 英国节点`[]🇳🇱 荷兰节点`[]🇫🇮 芬兰节点`[]🇪🇸 西班牙节点`[]🇮🇱 以色列节点`[]🇱🇻 拉脱维亚节点`[]🇦🇺 澳大利亚节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🎯 全球直连`select`DIRECT
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=💬 Ai平台`select`[]🌩 CF优选IP`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🌩 CF优选IP`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
 
+;地区测速分组
+custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 
-# ===== AI 平台策略分组（过滤高封锁区） =====
-custom_proxy_group=💬 Ai平台`select`🚀 节点选择,♻️ 自动选择,🇯🇵 日本节点,🇺🇲 美国节点,🇬🇧 英国节点,🇳🇱 荷兰节点,🇫🇮 芬兰节点,🇪🇸 西班牙节点,🇮🇱 以色列节点,🇸🇬 新加坡节点,🇹🇼 台湾节点,🚀 手动切换
+;新增：CF优选IP分组
+custom_proxy_group=🌩 CF优选IP`url-test`(CF|Cloudflare|优选|cf-ip|cf优选|优选IP|CF优选)`http://www.gstatic.com/generate_204`300,,50
 
-# ===== 最终出口策略分组（无直连） =====
-custom_proxy_group=🐟 漏网之鱼`select`🚀 节点选择,♻️ 自动选择,🇯🇵 日本节点,🇺🇲 美国节点,🇬🇧 英国节点,🇰🇷 韩国节点,🇭🇰 香港节点,🇹🇼 台湾节点,🇸🇬 新加坡节点,🇳🇱 荷兰节点,🇫🇮 芬兰节点,🇪🇸 西班牙节点,🚀 手动切换
-
-# ===== 地区测速分组（按需保留） =====
-custom_proxy_group=🇯🇵 日本节点`url-test`(日本|JP|Tokyo|大阪)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`(美|US|UnitedStates|洛杉矶|芝加哥|达拉斯)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇬🇧 英国节点`url-test`(英国|UK|United Kingdom|伦敦)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国节点`url-test`(韩国|KR|Korea|首尔)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港节点`url-test`(香港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾节点`url-test`(台湾|TW|Taiwan|台北)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡节点`url-test`(新加坡|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+;自定义国家/地区
+custom_proxy_group=🇩🇪 德国节点`url-test`(德国|DE|Germany)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇵🇱 波兰节点`url-test`(波兰|PL|Poland)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇬🇧 英国节点`url-test`(英国|UK|United Kingdom|London|伦敦)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|NL|Netherlands|阿姆斯特丹)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇫🇮 芬兰节点`url-test`(芬兰|FI|Finland|赫尔辛基)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇪🇸 西班牙节点`url-test`(西班牙|ES|Spain|马德里|巴塞罗那)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇮🇱 以色列节点`url-test`(以色列|IL|Israel|特拉维夫)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇱🇻 拉脱维亚节点`url-test`(拉脱维亚|LV|Latvia|里加)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇦🇺 澳大利亚节点`url-test`(澳大利亚|AU|Australia|悉尼|墨尔本)`http://www.gstatic.com/generate_204`300,,50
 
-# ===== 已移除分组（不再使用） =====
-# custom_proxy_group=🇩🇪 CF优选IP ...
+;设置分组标志位
+enable_rule_generator=true
+overwrite_original_rules=true
