--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -25,7 +25,6 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 
 ; --- 需要代理的国外服务 (包括AI平台) ---
-; 注意：AI平台域名已在 BanAD.list 中定义，此处规则确保其走代理
 ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
@@ -33,52 +32,28 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; 设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇦🇺 澳大利亚节点`[]🇧🇷 巴西节点`[]🇨🇦 加拿大节点`[]🇨🇭 瑞士节点`[]🇩🇪 德国节点`[]🇪🇸 西班牙节点`[]🇫🇮 芬兰节点`[]🇫🇷 法国节点`[]🇬🇧 英国节点`[]🇮🇪 爱尔兰节点`[]🇮🇱 以色列节点`[]🇮🇳 印度节点`[]🇮🇹 意大利节点`[]🇱🇹 立陶宛节点`[]🇱🇻 拉脱维亚节点`[]🇲🇩 摩尔多瓦节点`[]🇳🇱 荷兰节点`[]🇵🇱 波兰节点`[]🇷🇴 罗马尼亚节点`[]🇷🇺 俄罗斯节点`[]🇸🇪 瑞典节点`[]🇹🇷 土耳其节点`[]DIRECT
+; 核心分组：精简版，只保留常用地区
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇦🇺 澳大利亚节点`[]🇧🇷 巴西节点`[]🇨🇦 加拿大节点`[]🇨🇭 瑞士节点`[]🇩🇪 德国节点`[]🇪🇸 西班牙节点`[]🇫🇮 芬兰节点`[]🇫🇷 法国节点`[]🇬🇧 英国节点`[]🇮🇪 爱尔兰节点`[]🇮🇱 以色列节点`[]🇮🇳 印度节点`[]🇮🇹 意大利节点`[]🇱🇹 立陶宛节点`[]🇱🇻 拉脱维亚节点`[]🇲🇩 摩尔多瓦节点`[]🇳🇱 荷兰节点`[]🇵🇱 波兰节点`[]🇷🇴 罗马尼亚节点`[]🇷🇺 俄罗斯节点`[]🇸🇪 瑞典节点`[]🇹🇷 土耳其节点`[]DIRECT
+custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-; 优化：将可靠的代理组放在前面，DIRECT放在最后，提高安全性和成功率
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇨🇳 台湾节点`[]🇦🇺 澳大利亚节点`[]🇧🇷 巴西节点`[]🇨🇦 加拿大节点`[]🇨🇭 瑞士节点`[]🇩🇪 德国节点`[]🇪🇸 西班牙节点`[]🇫🇮 芬兰节点`[]🇫🇷 法国节点`[]🇬🇧 英国节点`[]🇮🇪 爱尔兰节点`[]🇮🇱 以色列节点`[]🇮🇳 印度节点`[]🇮🇹 意大利节点`[]🇱🇹 立陶宛节点`[]🇱🇻 拉脱维亚节点`[]🇲🇩 摩尔多瓦节点`[]🇳🇱 荷兰节点`[]🇵🇱 波兰节点`[]🇷🇴 罗马尼亚节点`[]🇷🇺 俄罗斯节点`[]🇸🇪 瑞典节点`[]🇹🇷 土耳其节点`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]DIRECT
 
-; 地区测速分组
+; 地区测速分组 (仅保留核心地区)
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇩🇪 德国节点`url-test`(德国|DE|Germany)`http://www.gstatic.com/generate_204`300,,50
 
 ; CF优选IP分组
 custom_proxy_group=🌩 CF优选IP`url-test`(CF|Cloudflare|优选|cf-ip|cf优选|优选IP|CF优选|CFnat)`http://www.gstatic.com/generate_204`300,,50
-
-; 自定义国家/地区
-custom_proxy_group=🇦🇺 澳大利亚节点`url-test`(澳大利亚|AU|Australia|悉尼|墨尔本)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇧🇷 巴西节点`url-test`(巴西|BR|Brazil)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇨🇦 加拿大节点`url-test`(加拿大|CA|Canada)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇨🇭 瑞士节点`url-test`(瑞士|CH|Switzerland)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(德国|DE|Germany)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇪🇸 西班牙节点`url-test`(西班牙|ES|Spain|马德里|巴塞罗那)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇫🇮 芬兰节点`url-test`(芬兰|FI|Finland|赫尔辛基)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇫🇷 法国节点`url-test`(法国|FR|France)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇬🇧 英国节点`url-test`(英国|UK|United Kingdom|London|伦敦)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇮🇪 爱尔兰节点`url-test`(爱尔兰|IE|Ireland)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇮🇱 以色列节点`url-test`(以色列|IL|Israel|特拉维夫)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇮🇳 印度节点`url-test`(印度|IN|India)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇮🇹 意大利节点`url-test`(意大利|IT|Italy)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇱🇹 立陶宛节点`url-test`(立陶宛|LT|Lithuania)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇱🇻 拉脱维亚节点`url-test`(拉脱维亚|LV|Latvia|里加)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇲🇩 摩尔多瓦节点`url-test`(摩尔多瓦|MD|Moldova)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|NL|Netherlands|阿姆斯特丹)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇵🇱 波兰节点`url-test`(波兰|PL|Poland)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇷🇴 罗马尼亚节点`url-test`(罗马尼亚|RO|Romania)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇷🇺 俄罗斯节点`url-test`(俄罗斯|RU|Russia)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇪 瑞典节点`url-test`(瑞典|SE|Sweden)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|TR|Turkey)`http://www.gstatic.com/generate_204`300,,50
 
 ; 启用规则生成器并覆盖原始规则
 enable_rule_generator=true
