--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -25,6 +25,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 
 ; --- 需要代理的国外服务 (包括AI平台) ---
+; 注意：AI平台域名已在 BanAD.list 中定义，此处规则确保其走代理
 ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
@@ -32,25 +33,28 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ; 设置分组标志位
-; 核心分组：精简版，只保留常用地区
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]DIRECT
+; 核心分组：精简版，用 🇳🇱 荷兰节点 替代 🇸🇬 狮城节点
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]DIRECT
+; AI平台分组：精简版，用 🇳🇱 荷兰节点 替代 🇸🇬 狮城节点
+custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]DIRECT
+; 优化：将可靠的代理组放在前面，DIRECT放在最后，并替换节点
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]DIRECT
 
-; 地区测速分组 (仅保留核心地区)
+; 地区测速分组 (仅保留核心地区，并添加荷兰节点)
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇩🇪 德国节点`url-test`(德国|DE|Germany)`http://www.gstatic.com/generate_204`300,,50
+; 新增：荷兰节点 (替换原新加坡节点)
+custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|NL|Netherlands|阿姆斯特丹)`http://www.gstatic.com/generate_204`300,,50
 
 ; CF优选IP分组
 custom_proxy_group=🌩 CF优选IP`url-test`(CF|Cloudflare|优选|cf-ip|cf优选|优选IP|CF优选|CFnat)`http://www.gstatic.com/generate_204`300,,50
