--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -27,6 +27,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 
 ; --- 需要代理的国外服务 (包括AI平台) ---
+; 根据最新仓库，AI.list 和 OpenAi.list 均为有效文件，予以保留
 ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
 ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
@@ -36,26 +37,29 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 ; 设置分组标志位
 ; 核心分组：精简版
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇰🇷 韩国节点
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]DIRECT
+
+custom_proxy_group=💬 Ai平台`select`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇰🇷 韩国节点
+
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇰🇷 韩国节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]DIRECT
+
+custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌩 CF优选IP`[]DIRECT
 
 ; 地区测速分组
-custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|HKG)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|NRT|HND|KIX|OKA|FUK|NGO)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States|LAX|SJC|SEA|ORD|DFW|LAS|PHX)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓|SEL|ICN|GMP)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(德国|DE|Germany|FRA|MUC|BER|HAM|DUS)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇳🇱 荷兰节点`url-test`(荷兰|NL|Netherlands|阿姆斯特丹|AMS|RTM|EIN)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇬🇧 英国节点`url-test`(英国|英|UK|United Kingdom|LHR|LGW|MAN|BHX)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇫🇷 法国节点`url-test`(法国|法|FR|France|CDG|ORY|MRS|LYS)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港节点`url-test`(HKG|港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(NRT|HND|JP|Japan|日本|东京|大阪|川日|泉日|埼玉|沪日|深日)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(LAX|SJC|US|United States|美|洛杉矶|圣何塞|硅谷|西雅图|芝加哥|达拉斯|拉斯维加斯|凤凰城)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇰🇷 韩国节点`url-test`(ICN|KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇩🇪 德国节点`url-test`(FRA|DE|Germany|德国|法兰克福|慕尼黑|柏林)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇳🇱 荷兰节点`url-test`(AMS|NL|Netherlands|荷兰|阿姆斯特丹)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇬🇧 英国节点`url-test`(LHR|UK|United Kingdom|英国|伦敦|曼彻斯特)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇫🇷 法国节点`url-test`(CDG|FR|France|法国|巴黎|马赛)`http://www.gstatic.com/generate_204`300,,50
 
 ; CF优选IP分组
 custom_proxy_group=🌩 CF优选IP`url-test`(CF|Cloudflare|优选|cf-ip|cf优选|优选IP|CF优选|CFnat)`http://www.gstatic.com/generate_204`300,,50
