--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -56,9 +56,9 @@ custom_proxy_group=🇭🇰 香港节点`url-test`(HKG|港|HK|hk|Hong Kong|HongK
 custom_proxy_group=🇯🇵 日本节点`url-test`(NRT|HND|JP|Japan|日本|东京|大阪|川日|泉日|埼玉|沪日|深日)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(LAX|SJC|US|United States|美|洛杉矶|圣何塞|硅谷|西雅图|芝加哥|达拉斯|拉斯维加斯|凤凰城)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇰🇷 韩国节点`url-test`(ICN|KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(FRA|DE|Germany|德国|法兰克福|慕尼黑|柏林)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇩🇪 德国节点`url-test`(DE|Germany|德国|法兰克福|慕尼黑|柏林)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇳🇱 荷兰节点`url-test`(AMS|NL|Netherlands|荷兰|阿姆斯特丹)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇬🇧 英国节点`url-test`(LHR|UK|United Kingdom|英国|伦敦|曼彻斯特)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇬🇧 英国节点`url-test`(LHR|UK|GB|United Kingdom|英国|伦敦|曼彻斯特)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇫🇷 法国节点`url-test`(CDG|FR|France|法国|巴黎|马赛)`http://www.gstatic.com/generate_204`300,,50
 
 ; CF优选IP分组
