--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -1,24 +1,21 @@
 [custom]
-; 不要随意改变关键字，否则会导致出错
-; acl4SSR规则
+; ==============================
+; 进阶综合版 ACL4SSR 配置（带注释说明版）
+; ==============================
 
-; 去广告：支持
-; 自动测速：支持
-; 增强中国IP段：支持
-; 增强国外GFW：支持
+; ==============================
+; 规则集定义
+; ==============================
 
-; 设置规则标志位
-; --- 本地和直连白名单 (优先级最高) ---
+; --- 本地和直连白名单 (优先级最高，确保局域网和解封域名直连) ---
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-
-; --- 解封列表 (放在广告拦截前，防止误杀) ---
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 
-; --- 广告和应用净化 (高优先级拦截) ---
+; --- 广告和应用净化 (优先级高，用于拦截广告和恶意域名) ---
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 
-; --- 中国国内服务直连 ---
+; --- 中国国内服务直连 (常见的中国域名/IP 优先直连) ---
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -26,32 +23,49 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 
-; --- 需要代理的国外服务 (包括AI平台) ---
-; 根据最新仓库，AI.list 和 OpenAi.list 均为有效文件，予以保留
+; --- 系统/服务类 (微软、谷歌、AI 平台等，确保不走 CN) ---
+ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Microsoft.list
+ruleset=📢 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
 ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
+
+; --- 国外代理 (常见 GFW 域名走代理) ---
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
-; --- 最后是漏网之鱼 ---
+; --- 漏网之鱼 (所有未命中规则的流量) ---
 ruleset=🐟 漏网之鱼,[]FINAL
 
-; 设置分组标志位
-; 核心分组：精简版
+; ==============================
+; 策略组设置
+; ==============================
+
+; --- 核心分组 (节点选择、自动/故障转移/负载均衡/手动切换) ---
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇰🇷 韩国节点
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
 
+; --- 系统/服务策略组 (针对具体服务细分) ---
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=💬 Ai平台`select`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇰🇷 韩国节点
-
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 
+; --- 全局模式切换 (规则/全局代理/全局直连) ---
+custom_proxy_group=🌐 模式切换`select`[]规则模式`[]全局代理`[]全局直连
+custom_proxy_group=规则模式`select`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=全局代理`select`[]🚀 节点选择
+custom_proxy_group=全局直连`select`[]DIRECT
+
+; --- 漏网之鱼兜底 ---
 custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌩 CF优选IP`[]DIRECT
 
-; 地区测速分组
+; ==============================
+; 地区测速分组 (按地区自动测速，便于选择最优节点)
+; ==============================
 custom_proxy_group=🇭🇰 香港节点`url-test`(HKG|港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(NRT|HND|JP|Japan|日本|东京|大阪|川日|泉日|埼玉|沪日|深日)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(LAX|SJC|US|United States|美|洛杉矶|圣何塞|硅谷|西雅图|芝加哥|达拉斯|拉斯维加斯|凤凰城)`http://www.gstatic.com/generate_204`300,,150
@@ -61,9 +75,11 @@ custom_proxy_group=🇳🇱 荷兰节点`url-test`(AMS|NL|Netherlands|荷兰|阿
 custom_proxy_group=🇬🇧 英国节点`url-test`(LHR|UK|GB|United Kingdom|英国|伦敦|曼彻斯特)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇫🇷 法国节点`url-test`(CDG|FR|France|法国|巴黎|马赛)`http://www.gstatic.com/generate_204`300,,50
 
-; CF优选IP分组
+; --- CF优选IP分组 (适合 Cloudflare Warp/优选IP 节点) ---
 custom_proxy_group=🌩 CF优选IP`url-test`(CF|Cloudflare|优选|cf-ip|cf优选|优选IP|CF优选|CFnat)`http://www.gstatic.com/generate_204`300,,50
 
-; 启用规则生成器并覆盖原始规则
+; ==============================
+; 规则生成器开关
+; ==============================
 enable_rule_generator=true
 overwrite_original_rules=true
