--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -29,6 +29,11 @@ ruleset=📢 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
 ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 
+; Unity 下载专用规则
+ruleset=🎮 Unity下载,[]DOMAIN-SUFFIX,unity3d.com
+ruleset=🎮 Unity下载,[]DOMAIN-SUFFIX,unity.com
+ruleset=🎮 Unity下载,[]DOMAIN-SUFFIX,download.unity3d.com
+
 ; --- 国外代理 (常见 GFW 域名走代理) ---
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
@@ -40,43 +45,36 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ; ==============================
 
 ; --- 核心分组 (节点选择、自动/故障转移/负载均衡/手动切换) ---
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇰🇷 韩国节点
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇳🇱 荷兰节点`[]🇩🇪 德国节点`[]🎮 Unity下载
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,200
+custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,200
+custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,200
 
 ; --- 系统/服务策略组 (针对具体服务细分) ---
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=💬 Ai平台`select`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇳🇱 荷兰节点`[]🇰🇷 韩国节点
+custom_proxy_group=💬 Ai平台`select`[]♻️ 自动选择`[]🚀 节点选择`[]🚀 手动切换`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 
-; --- 全局模式切换 (规则/全局代理/全局直连) ---
-custom_proxy_group=🌐 模式切换`select`[]规则模式`[]全局代理`[]全局直连
-custom_proxy_group=规则模式`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=全局代理`select`[]🚀 节点选择
-custom_proxy_group=全局直连`select`[]DIRECT
+; Unity 下载专用分组
+custom_proxy_group=🎮 Unity下载`select`[]🔯 故障转移`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇩🇪 德国节点`[]🔮 负载均衡`[]♻️ 自动选择`[]🚀 手动切换
 
 ; --- 漏网之鱼兜底 ---
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇳🇱 荷兰节点`[]🇩🇪 德国节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇰🇷 韩国节点`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换`[]🌩 CF优选IP`[]DIRECT
-
+custom_proxy_group=🐟 漏网之鱼`select`[]🌩 CF优选IP`[]🔮 负载均衡`[]🔯 故障转移`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇳🇱 荷兰节点`[]🇩🇪 德国节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
 ; ==============================
 ; 地区测速分组 (按地区自动测速，便于选择最优节点)
 ; ==============================
-custom_proxy_group=🇭🇰 香港节点`url-test`(HKG|港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(NRT|HND|JP|Japan|日本|东京|大阪|川日|泉日|埼玉|沪日|深日)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`(LAX|SJC|US|United States|美|洛杉矶|圣何塞|硅谷|西雅图|芝加哥|达拉斯|拉斯维加斯|凤凰城)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇰🇷 韩国节点`url-test`(ICN|KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(DE|Germany|德国|法兰克福|慕尼黑|柏林)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇳🇱 荷兰节点`url-test`(AMS|NL|Netherlands|荷兰|阿姆斯特丹)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇬🇧 英国节点`url-test`(LHR|UK|GB|United Kingdom|英国|伦敦|曼彻斯特)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇫🇷 法国节点`url-test`(CDG|FR|France|法国|巴黎|马赛)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港节点`url-test`(HKG|HK|Hong Kong|HongKong|hongkong|港|香港|香江|HGC|CMI|穗港|沪港|深港)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城节点`url-test`(SG|SGP|Singapore|新加坡|狮城|獅城|星|星洲|星国|Lion City|SG-SIN|SIN)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(US|USA|United States|America|美|美国|美國|洛杉矶|圣何塞|硅谷|西雅图|芝加哥|达拉斯|纽约|拉斯维加斯|凤凰城|LAX|SJC|SEA|DFW|NYC|ORD|LAS|PHX)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇩🇪 德国节点`url-test`(DE|DEU|Germany|German|德国|德國|法兰克福|慕尼黑|柏林|汉堡|法兰|Frankfurt|Munich|Berlin|Hamburg)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇳🇱 荷兰节点`url-test`(NL|NLD|Netherlands|Holland|荷兰|荷蘭|阿姆斯特丹|Amsterdam|Eindhoven|Rotterdam|AMS)`http://www.gstatic.com/generate_204`300,,50
 
 ; --- CF优选IP分组 (适合 Cloudflare Warp/优选IP 节点) ---
-custom_proxy_group=🌩 CF优选IP`url-test`(CF|Cloudflare|优选|cf-ip|cf优选|优选IP|CF优选|CFnat)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌩 CF优选IP`url-test`(CF|Cloudflare|优选|優選|cf-ip|cf优选|CF优选|CFnat|Warp)`http://www.gstatic.com/generate_204`300,,50
 
 ; ==============================
 ; 规则生成器开关
