--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -1,124 +1,111 @@
 [custom]
 ; ==============================
-; 综合优化版 ACL4SSR
+; 综合优化版 ACL4SSR（兼容修正版）
 ; ==============================
 
 ; ==============================
 ; 规则集定义
 ; ==============================
 
-; --- 本地和直连白名单 (优先级最高，确保局域网和解封域名直连) ---
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+; --- 本地和直连白名单 (优先级最高) ---
+ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 
-; --- 广告和应用净化 (优先级高，用于拦截广告和恶意域名) ---
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-; --- AdblockPlus 增强（更强的广告与隐私拦截） ---
-ruleset=🧹 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
-ruleset=🧹 AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
-ruleset=🛡️ 隐私防护,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+; --- 广告和应用净化 ---
+ruleset=广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
+ruleset=应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+ruleset=AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
+ruleset=AdBlock,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
+ruleset=隐私防护,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 
-; --- 中国国内服务直连 (常见的中国域名/IP 优先直连) ---
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🎯 全球直连,[]GEOIP,CN
+; --- 中国国内服务直连 ---
+ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 
-; --- 系统/服务类 (微软、谷歌、AI 平台等，确保不走 CN) ---
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Microsoft.list
-ruleset=📢 谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
-ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
-ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
-ruleset=📨 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
-ruleset=🔎 必应Bing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bing.list
+; --- 系统/服务类 ---
+ruleset=微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Microsoft.list
+ruleset=谷歌服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
+ruleset=AI平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
+ruleset=OpenAI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
+ruleset=谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=必应Bing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bing.list
 
-; --- Apple / 云 / 消息 / 流媒体 / 游戏平台 ---
-ruleset=🍎 Apple服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-ruleset=☁️ OneDrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
-ruleset=📱 Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=🎬 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Netflix.list
-ruleset=📺 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=📺 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=🎮 Xbox,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Xbox.list
+; --- Apple / 云 / 消息 / 流媒体 / 游戏 ---
+ruleset=Apple服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+ruleset=OneDrive,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+ruleset=Telegram,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Netflix.list
+ruleset=国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=Xbox,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Xbox.list
 
-; --- 代码托管与开发平台 (GitHub/GitLab 等) ---
-ruleset=🧑‍💻 开发平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Developer.list
+; --- Google Play CN 特殊处理 ---
+ruleset=GooglePlayProxyIP,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 
-; --- Google Play CN 特殊处理 (Full_Google 补充) ---
-ruleset=📱 GooglePlay下载,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
-ruleset=📱 GooglePlay服务,[]DOMAIN-SUFFIX,services.googleapis.cn
-ruleset=📱 GooglePlay服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+; --- UnityHub 下载专用规则 ---
+ruleset=UnityHub,[]DOMAIN-SUFFIX,unity3d.com
+ruleset=UnityHub,[]DOMAIN-SUFFIX,unity.com
 
-; --- UnityHub 下载专用规则 (域名后缀补充) ---
-ruleset=🎮 UnityHub,[]DOMAIN-SUFFIX,unity3d.com
-ruleset=🎮 UnityHub,[]DOMAIN-SUFFIX,unity.com
-ruleset=🎮 UnityHub,[]DOMAIN,download.unity3d.com
-ruleset=🎮 UnityHub,[]DOMAIN-SUFFIX,unitychina.cn
+; --- 国外代理 GFW 列表 ---
+ruleset=节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 
-; --- 国外代理 (常见 GFW 域名走代理) ---
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-
-; --- 漏网之鱼 (所有未命中规则的流量) ---
-ruleset=🐟 漏网之鱼,[]FINAL
-
+; --- 漏网之鱼 (兜底) ---
+ruleset=漏网之鱼,[]FINAL
 
 ; ==============================
 ; 策略组设置
 ; ==============================
 
-; --- 核心分组 (节点选择、自动/故障转移/负载均衡/手动切换) ---
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]🌩 CF优选IP`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇳🇱 荷兰节点`[]🇩🇪 德国节点
-custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,200
-custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,200
-custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,200
+; 核心分组
+custom_proxy_group=节点选择`select`[]自动选择`[]故障转移`[]负载均衡`[]手动切换`[]CF优选IP`[]香港节点`[]美国节点`[]狮城节点`[]荷兰节点`[]德国节点
+custom_proxy_group=手动切换`select`.*
+custom_proxy_group=自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,200
+custom_proxy_group=故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,200
+custom_proxy_group=负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,200
 
-; --- 广告与隐私策略组 ---
-custom_proxy_group=🧹 AdBlock`select`[]REJECT`[]DIRECT
-custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
-custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
+; 广告与隐私组
+custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
+custom_proxy_group=隐私防护`select`[]REJECT`[]DIRECT
+custom_proxy_group=广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=应用净化`select`[]REJECT`[]DIRECT
 
-; --- 系统/服务策略组 (针对具体服务细分) ---
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=📨 谷歌FCM`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🔎 必应Bing`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🍎 Apple服务`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=☁️ OneDrive`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=📱 Telegram`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT
-custom_proxy_group=🎬 Netflix`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]DIRECT
-custom_proxy_group=📺 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT
-custom_proxy_group=📺 国内媒体`select`[]DIRECT`[]🚀 节点选择
-custom_proxy_group=🎮 Xbox`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=🧑‍💻 开发平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT
+; 系统/服务策略组
+custom_proxy_group=微软服务`select`[]节点选择`[]DIRECT
+custom_proxy_group=谷歌服务`select`[]节点选择`[]DIRECT
+custom_proxy_group=谷歌FCM`select`[]节点选择`[]DIRECT
+custom_proxy_group=必应Bing`select`[]节点选择`[]DIRECT
+custom_proxy_group=Apple服务`select`[]节点选择`[]DIRECT
+custom_proxy_group=OneDrive`select`[]节点选择`[]DIRECT
+custom_proxy_group=Telegram`select`[]节点选择`[]自动选择`[]DIRECT
+custom_proxy_group=Netflix`select`[]节点选择`[]美国节点`[]狮城节点`[]香港节点`[]DIRECT
+custom_proxy_group=国外媒体`select`[]节点选择`[]自动选择`[]DIRECT
+custom_proxy_group=国内媒体`select`[]DIRECT`[]节点选择
+custom_proxy_group=Xbox`select`[]节点选择`[]DIRECT
 
-; --- Google Play 专用策略组 ---
-custom_proxy_group=📱 GooglePlay下载`select`[]🚀 节点选择`[]DIRECT
-custom_proxy_group=📱 GooglePlay服务`select`[]🚀 节点选择`[]DIRECT
+; Google Play 专用组
+custom_proxy_group=GooglePlay下载`select`[]节点选择`[]DIRECT
+custom_proxy_group=GooglePlay服务`select`[]节点选择`[]DIRECT
 
-; --- Unity 下载专用分组 ---
-custom_proxy_group=🎮 UnityHub`select`[]🔯 故障转移`[]🔮 负载均衡`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]♻️ 自动选择`[]🚀 手动切换
+; Unity 专用组（US > SG > DE）
+custom_proxy_group=UnityHub`select`[]故障转移`[]负载均衡`[]美国节点`[]狮城节点`[]德国节点`[]荷兰节点`[]自动选择`[]手动切换
 
-; --- 漏网之鱼兜底 ---
-custom_proxy_group=🐟 漏网之鱼`select`[]🌩 CF优选IP`[]🔮 负载均衡`[]🔯 故障转移`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇳🇱 荷兰节点`[]🇩🇪 德国节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
-
+; 漏网之鱼兜底
+custom_proxy_group=漏网之鱼`select`[]CF优选IP`[]负载均衡`[]故障转移`[]自动选择`[]香港节点`[]美国节点`[]狮城节点`[]荷兰节点`[]德国节点`[]节点选择`[]手动切换`[]DIRECT
 
 ; ==============================
-; 地区测速分组 (按地区自动测速，便于选择最优节点)
+; 地区测速分组
 ; ==============================
-custom_proxy_group=🇭🇰 香港节点`url-test`(HKG|HK|Hong Kong|HongKong|hongkong|港|香港|香江|HGC|CMI|穗港|沪港|深港)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城节点`url-test`(SG|SGP|Singapore|新加坡|狮城|獅城|星|星洲|星国|Lion City|SG-SIN|SIN)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇺🇲 美国节点`url-test`(US|USA|United States|America|美|美国|美國|洛杉矶|圣何塞|硅谷|西雅图|芝加哥|达拉斯|纽约|拉斯维加斯|凤凰城|LAX|SJC|SEA|DFW|NYC|ORD|LAS|PHX)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇩🇪 德国节点`url-test`(DE|DEU|Germany|German|德国|德國|法兰克福|慕尼黑|柏林|汉堡|法兰|Frankfurt|Munich|Berlin|Hamburg)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇳🇱 荷兰节点`url-test`(NL|NLD|Netherlands|Holland|荷兰|荷蘭|阿姆斯特丹|Amsterdam|Eindhoven|Rotterdam|AMS)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=香港节点`url-test`(HKG|HK|Hong Kong|HongKong|hongkong|港|香港)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=狮城节点`url-test`(SG|SGP|Singapore|新加坡|狮城)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=美国节点`url-test`(US|USA|United States|America|美|美国)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=德国节点`url-test`(DE|DEU|Germany|德国)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=荷兰节点`url-test`(NL|NLD|Netherlands|荷兰)`http://www.gstatic.com/generate_204`300,,150
 
-; --- CF优选IP分组 (适合 Cloudflare Warp/优选IP 节点) ---
-custom_proxy_group=🌩 CF优选IP`url-test`(CF|Cloudflare|优选|優選|cf-ip|cf优选|CF优选|CFnat|Warp)`http://www.gstatic.com/generate_204`300,,50
-
+; CF 优选 IP
+custom_proxy_group=CF优选IP`url-test`(CF|Cloudflare|优选|Warp)`http://www.gstatic.com/generate_204`300,,150
 
 ; ==============================
 ; 规则生成器开关
