--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -96,6 +96,7 @@ custom_proxy_group=📺 国内媒体`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🎮 Xbox`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 
 ; --- Google Play 专用策略组 ---
 custom_proxy_group=📱 GooglePlay下载`select`[]🚀 节点选择`[]DIRECT
