--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -52,7 +52,9 @@ ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 
 
 ; --- Google Play CN 特殊处理 (Full_Google 补充) ---
-ruleset=📱 GooglePlay服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
+ruleset=📢 谷歌🇨🇳Play下载,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,services.googleapis.cn
+ruleset=📢 谷歌🇨🇳Play服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 
 ; --- UnityHub 下载专用规则 (域名后缀补充) ---
 ruleset=🎮 UnityHub,[]DOMAIN-SUFFIX,unity3d.com
@@ -86,6 +88,8 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=Ⓜ️ 微软服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📢 谷歌服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=📨 谷歌FCM`select`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=📢 谷歌🇨🇳Play下载`select`[]🚀 节点选择`[]DIRECT
+custom_proxy_group=📢 谷歌🇨🇳Play服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🔎 必应Bing`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=🍎 Apple服务`select`[]🚀 节点选择`[]DIRECT
 custom_proxy_group=☁️ OneDrive`select`[]🚀 节点选择`[]DIRECT
