--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -52,43 +52,43 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ; ==============================
 
 ; --- 核心分组 ---
-custom_proxy_group=🚀 节点选择 select[]♻️ 自动选择[]🔯 故障转移[]🔮 负载均衡[]🚀 手动切换[]🇭🇰 香港节点[]🇺🇲 美国节点[]🇸🇬 狮城节点[]🇳🇱 荷兰节点[]🇩🇪 德国节点[]🌩 CF优选IP
-custom_proxy_group=🚀 手动切换 select.*
-custom_proxy_group=♻️ 自动选择 url-test.* http://www.gstatic.com/generate_204 300,,200
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇳🇱 荷兰节点`[]🇩🇪 德国节点`[]🌩 CF优选IP
+custom_proxy_group=🚀 手动切换`select.*
+custom_proxy_group=♻️ 自动选择`url-test.* http://www.gstatic.com/generate_204 300,,200
 custom_proxy_group=🔯 故障转移 fallback.* http://www.gstatic.com/generate_204 300,,200
 custom_proxy_group=🔮 负载均衡 load-balance.* http://www.gstatic.com/generate_204 300,,200
 
 ; --- 广告与隐私策略组 ---
-custom_proxy_group=🧹 AdBlock select[]REJECT[]DIRECT
-custom_proxy_group=🛡️ 隐私防护 select[]REJECT[]DIRECT
-custom_proxy_group=🛑 广告拦截 select[]REJECT[]DIRECT
-custom_proxy_group=🍃 应用净化 select[]REJECT[]DIRECT
+custom_proxy_group=🧹 AdBlock`select`[]REJECT`[]DIRECT
+custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 
 ; --- 系统/服务策略组 ---
-custom_proxy_group=📲 电报消息 select[]🚀 节点选择[]♻️ 自动选择[]🇸🇬 狮城节点[]🇭🇰 香港节点[]🇺🇲 美国节点[]🚀 手动切换[]DIRECT
-custom_proxy_group=💬 Ai平台 select[]🚀 节点选择[]♻️ 自动选择[]🇸🇬 狮城节点[]🇭🇰 香港节点[]🇺🇲 美国节点[]🚀 手动切换[]DIRECT
-custom_proxy_group=📹 油管视频 select[]🚀 节点选择[]♻️ 自动选择[]🇸🇬 狮城节点[]🇭🇰 香港节点[]🇺🇲 美国节点[]🚀 手动切换[]DIRECT
-custom_proxy_group=🌍 国外媒体 select[]🚀 节点选择[]♻️ 自动选择[]🇭🇰 香港节点[]🇸🇬 狮城节点[]🇺🇲 美国节点[]🚀 手动切换[]DIRECT
-custom_proxy_group=🌏 国内媒体 select[]DIRECT[]🇭🇰 香港节点[]🇸🇬 狮城节点[]🚀 手动切换
-custom_proxy_group=📢 谷歌FCM select[]DIRECT[]🚀 节点选择[]🇺🇲 美国节点[]🇭🇰 香港节点[]🇸🇬 狮城节点[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软Bing select[]DIRECT[]🚀 节点选择[]🇺🇲 美国节点[]🇭🇰 香港节点[]🇸🇬 狮城节点[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软云盘 select[]DIRECT[]🚀 节点选择[]🇺🇲 美国节点[]🇭🇰 香港节点[]🇸🇬 狮城节点[]🚀 手动切换
-custom_proxy_group=Ⓜ️ 微软服务 select[]DIRECT[]🚀 节点选择[]🇺🇲 美国节点[]🇭🇰 香港节点[]🇸🇬 狮城节点[]🚀 手动切换
-custom_proxy_group=🍎 苹果服务 select[]DIRECT[]🚀 节点选择[]🇺🇲 美国节点[]🇭🇰 香港节点[]🇸🇬 狮城节点[]🚀 手动切换
-custom_proxy_group=🎮 游戏平台 select[]DIRECT[]🚀 节点选择[]🇺🇲 美国节点[]🇭🇰 香港节点[]🇸🇬 狮城节点[]🚀 手动切换
-custom_proxy_group=🎶 网易音乐 select[]DIRECT[]🚀 节点选择[]♻️ 自动选择
-custom_proxy_group=🎯 全球直连 select[]DIRECT[]🚀 节点选择[]♻️ 自动选择
-custom_proxy_group=🐟 漏网之鱼 select[]🚀 节点选择[]♻️ 自动选择[]DIRECT[]🇭🇰 香港节点[]🇸🇬 狮城节点[]🇺🇲 美国节点[]🚀 手动切换
+custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=💬 Ai平台`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🚀 手动切换
+custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软Bing`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🚀 手动切换
+custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🚀 手动切换
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🚀 手动切换
+custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🚀 手动切换
+custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🚀 手动切换
 
 ; ==============================
 ; 地区测速分组
 ; ==============================
-custom_proxy_group=🇭🇰 香港节点 url-test(HKG|HK|Hong Kong|HongKong|hongkong|港|香港|香江|HGC|CMI|穗港|沪港|深港) http://www.gstatic.com/generate_204 300,,50
-custom_proxy_group=🇸🇬 狮城节点 url-test(SG|SGP|Singapore|新加坡|狮城|獅城|星|星洲|星国|Lion City|SG-SIN|SIN) http://www.gstatic.com/generate_204 300,,150
-custom_proxy_group=🇺🇲 美国节点 url-test(US|USA|United States|America|美|美国|美國|洛杉矶|圣何塞|硅谷|西雅图|芝加哥|达拉斯|纽约|拉斯维加斯|凤凰城|LAX|SJC|SEA|DFW|NYC|ORD|LAS|PHX) http://www.gstatic.com/generate_204 300,,150
-custom_proxy_group=🇩🇪 德国节点 url-test(DE|DEU|Germany|German|德国|德國|法兰克福|慕尼黑|柏林|汉堡|法兰|Frankfurt|Munich|Berlin|Hamburg) http://www.gstatic.com/generate_204 300,,150
-custom_proxy_group=🇳🇱 荷兰节点 url-test(NL|NLD|Netherlands|Holland|荷兰|荷蘭|阿姆斯特丹|Amsterdam|Eindhoven|Rotterdam|AMS) http://www.gstatic.com/generate_204 300,,150
-custom_proxy_group=🌩 CF优选IP url-test(CF|Cloudflare|优选|優選|cf-ip|cf优选|CF优选|CFnat|Warp) http://www.gstatic.com/generate_204 300,,50
+custom_proxy_group=🇭🇰 香港节点`url-test`(HKG|HK|Hong Kong|HongKong|hongkong|港|香港|香江|HGC|CMI|穗港|沪港|深港) http://www.gstatic.com/generate_204 300,,50
+custom_proxy_group=🇸🇬 狮城节点`url-test`(SG|SGP|Singapore|新加坡|狮城|獅城|星|星洲|星国|Lion City|SG-SIN|SIN) http://www.gstatic.com/generate_204 300,,150
+custom_proxy_group=🇺🇲 美国节点`url-test`(US|USA|United States|America|美|美国|美國|洛杉矶|圣何塞|硅谷|西雅图|芝加哥|达拉斯|纽约|拉斯维加斯|凤凰城|LAX|SJC|SEA|DFW|NYC|ORD|LAS|PHX) http://www.gstatic.com/generate_204 300,,150
+custom_proxy_group=🇩🇪 德国节点`url-test`(DE|DEU|Germany|German|德国|德國|法兰克福|慕尼黑|柏林|汉堡|法兰|Frankfurt|Munich|Berlin|Hamburg) http://www.gstatic.com/generate_204 300,,150
+custom_proxy_group=🇳🇱 荷兰节点`url-test`(NL|NLD|Netherlands|Holland|荷兰|荷蘭|阿姆斯特丹|Amsterdam|Eindhoven|Rotterdam|AMS) http://www.gstatic.com/generate_204 300,,150
+custom_proxy_group=🌩 CF优选IP`url-test`(CF|Cloudflare|优选|優選|cf-ip|cf优选|CF优选|CFnat|Warp) http://www.gstatic.com/generate_204 300,,50
 
 ; ==============================
 ; 规则生成器开关
