--- a/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Mini_MultiMode.ini
@@ -54,9 +54,9 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ; --- 核心分组 ---
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🔮 负载均衡`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇺🇲 美国节点`[]🇸🇬 狮城节点`[]🇳🇱 荷兰节点`[]🇩🇪 德国节点`[]🌩 CF优选IP
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204 300,,200
-custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204 300,,200
-custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204 300,,200
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,200
+custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,,200
+custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,200
 
 ; --- 广告与隐私策略组 ---
 custom_proxy_group=🧹 AdBlock`select`[]REJECT`[]DIRECT
